[security-ui] Prevent login form double submission (elastic/x-pack#3696)
* [security-ui] Prevent login form double submission

* [security-ui] Update login button hover/focus styles so it doesn't look disabled

* [security-ui] Remove :active from the list

Original commit: elastic/x-pack@a5b03e43facc6093c268ee3d563afb66c72dd928

--- a/plugins/security/public/views/login/login.less
+++ b/plugins/security/public/views/login/login.less
@@ -93,6 +93,10 @@ button.login {
   color: white;
   font-size: 1.25em;
   border: none;
+
+  &:focus, &:hover {
+    background-color: @black;
+  }
 }
 
 input.form-control {
